Add semanas de aulas personalizadas